--- a/styles.css
+++ b/styles.css
@@ -108,14 +108,18 @@ body {
   outline: none;
 }
 .preorder-btn {
-  background: #ff104c;
+  background: #EDAE58;
   color: #fff;
-  border: 1px solid #ff104c;
+  border: 1px solid #EDAE58;
   border-radius: 8px;
   padding: 1rem 2rem;
   cursor: pointer;
   width: 100%;
 	font-size: 1rem;
+}
+.preorder-btn:hover {
+  background: #DCB780;
+	border: 1px solid #DCB780;
 }
 
 @media (min-width: 768px) {
@@ -143,13 +147,9 @@ body {
   }
 }
 
-.preorder-btn:hover {
-  background: #c50432;
-  box-shadow: 0 6px 30px 0 rgba(197, 4, 50, 0.18),
-    0 1.5px 12px 0 rgba(255, 129, 73, 0.13);
-}
+
 .preorder-sample-info {
-  color: #666;
+  color: #606060;
 }
 @media (min-width: 768px) {
   .preorder-sample-info {
