--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,7 @@ body {
   }
 }
 
-/*--- Landing Section Styles ---------------------------------------------------*/
-
-.landing-section {
+.landing-box {
   width: 100%;
 }
 
@@ -35,10 +33,16 @@ body {
   display: block;
 }
 
-.video-section {
+.video-box {
   width: 100%;
   background: #ffffff;
-  padding: 1rem 1rem;
+  padding: 2rem 2rem 1rem 2rem;
+}
+
+@media (min-width: 768px) {
+  .video-box {
+		padding-top: 3rem;
+  }
 }
 
 .promo-video {
@@ -46,11 +50,7 @@ body {
   height: auto;
   display: block;
 }
-@media (min-width: 768px) {
-  .video-section {
-		padding-top: 3rem
-  }
-}
+
 
 /*--- Animation Styles ---------------------------------------------------*/
 .animate {
@@ -70,22 +70,24 @@ body {
   margin: 0 auto;
 }
 
-.emoticon-section,.preorder-section {
+.emoticon-section,.preorder-box {
   width: 100%;
-  padding: 3rem 1rem 0 1rem;
+  padding: 3rem 2rem 0 2rem;
   text-align: center;
   color: #000000
 	font-size: 1rem;
 	background: #ffffff;
 }
-.preorder-section {
+.preorder-box {
 	padding-bottom: 5rem;
 }
-@media (min-width: 768px) {
-	.emoticon-section,.preorder-section {
-		padding-top: 5rem
+@media (min-width: 1024px) {
+	.emoticon-section,.preorder-box {
+		padding-top: 5rem;
+		padding-left: 0;
+		padding-right: 0;
   }
-	.preorder-section {
+	.preorder-box {
 		padding-bottom: 6rem;
 	}
 }
@@ -160,6 +162,11 @@ body {
   transition: all 0.3s ease;
   position: relative;
 }
+@media (min-width: 768px) {
+  .emoticon-box {
+    padding: 3rem 1.5rem;
+  }
+}
 
 /* 흐린 이모티콘들을 위한 추가 오버레이 */
 .emoticon-box::after {
@@ -181,12 +188,6 @@ body {
   border-radius: 1.5rem;
 }
 
-@media (min-width: 768px) {
-  .emoticon-box {
-    padding: 3rem;
-  }
-}
-
 .emoticon-flex {
   display: flex;
   flex-wrap: wrap;
@@ -194,11 +195,12 @@ body {
   gap: 1rem;
   position: relative;
   overflow: hidden;
-  max-height: 21rem; /* 높이 제한으로 잘린 느낌 */
+  max-height: 15rem; /* 높이 제한으로 잘린 느낌 */
 }
 @media (min-width: 768px) {
   .emoticon-flex {
-    max-height: 25rem;
+    max-height: 26rem;
+		gap: 1.5rem;
   }
 }
 
@@ -284,6 +286,15 @@ body {
   width: 100%;
   transition: all 0.3s;
 	font-size: 1rem;
+	max-width: 500px;
+	margin: 0 auto;
+}
+@media (min-width: 768px) {
+  .preorder-form {
+		max-width: none;
+    font-size: 1.2rem;
+    flex-direction: row;
+  }
 }
 
 #email-input {
@@ -311,12 +322,7 @@ body {
 	border: 1px solid #DCB780;
 }
 
-@media (min-width: 768px) {
-  .preorder-form {
-    font-size: 1.2rem;
-    flex-direction: row;
-  }
-}
+
 @media (min-width: 768px) {
   #email-input,
   .preorder-btn {
