--- a/styles.css
+++ b/styles.css
@@ -83,9 +83,11 @@ body {
 }
 @media (min-width: 1024px) {
 	.emoticon-section,.preorder-box {
-		padding-top: 5rem;
 		padding-left: 0;
 		padding-right: 0;
+  }
+	.emoticon-section {
+		padding-top: 5rem;
   }
 	.preorder-box {
 		padding-bottom: 6rem;
@@ -100,7 +102,7 @@ body {
 .emoticon-title {
   font-family: 'Cafe24 Supermagic', 'Nanum Pen Script', 'UhBee Se_hyun',
     'Gmarket Sans', 'Noto Sans KR', sans-serif;
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 500;
   margin-top: 0;
   margin-bottom: 1.5rem;
@@ -139,17 +141,18 @@ body {
 }
 
 .emoticon-character {
-  font-size: 1.25rem;
-  font-weight: 700;
-  color: #1a1a1a;
+  font-size: 2rem;
+  font-weight: 500;
   text-align: center;
+	margin-top: 1rem;
   margin-bottom: 1rem;
-  font-family: 'GmarketSans', sans-serif;
+	font-family: 'Cafe24 Supermagic', 'Nanum Pen Script', 'UhBee Se_hyun',
+	'Gmarket Sans', 'Noto Sans KR', sans-serif;
 }
 
 @media (min-width: 768px) {
   .emoticon-character {
-    font-size: 1.5rem;
+    font-size: 3rem;
     margin-bottom: 1.5rem;
   }
 }
@@ -192,10 +195,10 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 1rem;
+  gap: 3rem;
   position: relative;
   overflow: hidden;
-  max-height: 15rem; /* 높이 제한으로 잘린 느낌 */
+  max-height: 20rem; /* 높이 제한으로 잘린 느낌 */
 }
 @media (min-width: 768px) {
   .emoticon-flex {
