--- a/styles.css
+++ b/styles.css
@@ -90,15 +90,18 @@ body {
 .video-box {
   width: 100%;
   background: var(--color-background);
-  /* padding: var(--spacing-lg) var(--spacing-lg) var(--spacing-sm) */
+  padding: var(--spacing-lg) var(--spacing-lg) var(--spacing-sm);
     var(--spacing-lg);
   position: relative;
+  background: #fbb03b;
 }
 
 @media (min-width: 768px) {
   .video-box {
-    /* padding-top: var(--spacing-xl); */
-  }
+    padding-top: var(--spacing-xxl);
+		padding-left: var(--spacing-xxl);
+		padding-right: var(--spacing-xxl);
+	}
 }
 
 .promo-video {
@@ -217,7 +220,8 @@ body {
   width: 100%;
   max-width: 75rem;
   margin: 0 auto;
-  padding: var(--spacing-xl) var(--spacing-lg) var(--spacing-xxl) var(--spacing-lg);
+  padding: var(--spacing-xl) var(--spacing-lg) var(--spacing-xxl)
+    var(--spacing-lg);
   text-align: center;
   color: var(--color-text);
   font-size: 1rem;
